<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:fillViewport="true"
               android:layout_weight="1"
              android:layout_gravity="fill"
              android:gravity="fill"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
>    
    <TextView
        android:id="@+id/distance_label"
        android:layout_weight="1"
        android:textColor="#ff7000"
        android:textSize="60.0sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:text="@string/distance_label"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"        
        android:background="@drawable/round_text_view"
    />
    <TextView
        android:id="@+id/duration_label"
        android:layout_weight="1"
        android:textColor="#ff7000"
        android:textSize="60.0sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration_label"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"        
        android:background="@drawable/round_text_view"
    />  
    <TextView
        android:id="@+id/instant_speed_label"
        android:layout_weight="1"
        android:textColor="#FF7700"
        android:textSize="40.0sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instant_speed_label"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"        
        android:background="@drawable/round_text_view"
    />
    <TextView
        android:id="@+id/average_speed_label"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#FF7700"
        android:textSize="40.0sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average_speed_label"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"        
        android:background="@drawable/round_text_view"       
    />  
    <TextView
        android:id="@+id/elevation_label"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#FF7700"
        android:textSize="40.0sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elevation_label"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"        
        android:background="@drawable/round_text_view"       
    />      
    <TextView
        android:id="@+id/coordinateE"
        android:layout_weight="0"
        android:textColor="#FF7700"
        android:textSize="15.0sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinate_e_label"
    />   
    <TextView
        android:id="@+id/coordinateN"
        android:layout_weight="0"
        android:textColor="#FF7700"
        android:textSize="15.0sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinate_n_label"
    />    
    <TextView
        android:id="@+id/satellite"
        android:layout_weight="0"
        android:textColor="#FF0000"
        android:textSize="15.0sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/satellite_label"
    />    

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    >   
        <Button
            android:id="@+id/button_start_resume"
            android:textSize="15.0sp"
            android:layout_weight = "1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_start_resume"
            android:onClick="startResume" 
            android:enabled="false"
        />
        <Button            
            android:textSize="15.0sp"
            android:layout_weight = "1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            android:onClick="reset"             
        />
    </LinearLayout>  
</LinearLayout>    
    


